<resources>
    <string name="app_name">ICE App</string>
    <string name="my_profile">My Profile</string>
    <string name="blood_type">Blood Type: </string>
    <string name="edit">Edit </string>
    <string name="contact">Contact </string>
    <string name="allergies">Allergies: </string>
    <string name="relation">Relation: </string>
    <string name="phone_number">Phone Number: </string>
    <string name="profile_prompt">Enter your information below- </string>
    <string name="first_name">First name </string>
    <string name="last_name">Last name </string>
    <string name="blood_type_hint">Blood Type </string>
    <string name="allergies_hint">Allergies, if none please enter N/A</string>
    <string name="finish">Finish </string>
    <string name="contact_prompt">Enter your emergency contact\'s information below or search through your contacts</string>
    <string name="phone_number_prompt">Phone number </string>
    <string name="relation_prompt">Relation </string>
    <string name="search_contact_button_text">Search in my contacts</string>
    <string name="edit_your_profile">Edit your profile </string>
    <string name="edit_contact">Edit your contact\'s information</string>
    <string name="notification_title">In Case of Emergency</string>
    <string name="notification_text">This is the notification</string>
    <string name="notification_enabled_message">Notification enabled</string>
    <string name="notification_disabled_message">Notification disabled</string>
    <string name="name">Name: </string>
    <string name="notification_divider">-----</string>

    <string-array name="blood_type">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>Not known</item>
    </string-array>

    <string-array name="relations">
        <item>Mother</item>
        <item>Father</item>
        <item>Husband</item>
        <item>Wife</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Friend</item>
        <item>Other</item>
    </string-array>
</resources>
